# ny-altbot

./: .eslintignore  .eslintrc.json  .flake8  .gitignore  Dockerfile-bot  Dockerfile-db  LICENSE  README.md  TODO.md  conf.example.json  docker-compose.yml  example-config.json  index.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
commands/: addtag.js  addupdatechan.js  apdevstatus.js  applestatus.js  ping.js  remtag.js  remupdatechan.js  sendreactmsgs.js  tag.js  tags.js  verify.js
events/: interactionCreate.js  ready.js  userJoin.js
modules/: admin.py  fun.py  jitbotremains.py  jitreroles.py  music.py  reactionroles.py  sources.py  tags.py  tester.py  utils.py
utils/: all-roles.js  deploy-commands.js  modals.py  schema.py  schema.sql  version_utils.js  views.py
